# AudioRecordPlus

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: jni_main.cpp  jni_main.h  native-lib.cpp
app/src/main/cpp/aecm/: aecm_core.c  aecm_core.cc  aecm_core.h  aecm_core_c.cc  aecm_jni_main.c  aecm_jni_main.cc  aecm_jni_main.h  aecm_main.c  aecm_wrapper.cc  aecm_wrapper.h  delay_estimator_wrapper.h  echo_control_mobile.cc  real_fft.c  signal_processing_library.h  spl_init.c
app/src/main/cpp/agc/: agc_jni_main.cc  agc_jni_main.h  agc_wrapper.cc  agc_wrapper.h  analog_agc.c  analog_agc.h  digital_agc.c  digital_agc.h
app/src/main/cpp/common/: base_wrapper.cc  base_wrapper.h  cross_correlation.h  delay_estimator.cc  delay_estimator_wrapper.cc  dot_product_with_scale.c  downsample_fast.c  min_max_operations.c  real_fft.c  ring_buffer.c  spl_init.c  spl_sqrt.c
app/src/main/cpp/include/: signal_processing_library.h
app/src/main/cpp/ns/: audio_ns.c  audio_ns.h  noise_suppression.c  ns_core.c  ns_core.h  ns_jni_main.c  ns_jni_main.cc  ns_jni_main.h  ns_main.c  ns_main.h  ns_wrap.c  ns_wrap.h  ns_wrapper.cc  ns_wrapper.h
app/src/main/java/com/singun/audiorecordplus/: AudioRecordPlayerPlus.java  MainActivity.java  SettingDialog.java
app/src/main/java/com/singun/media/audio/: AudioConfig.java  AudioEncodeUtil.java  AudioFileWriter.java  AudioPlayer.java  AudioRecordPlayer.java  BaseAudioRecorder.java  ExtraAudioRecorder.java  MiniAudioRecorder.java  MiniAudioTrack.java
app/src/main/java/com/singun/media/audio/encode/: AudioEncodeUtil.java
app/src/main/java/com/singun/media/audio/player/: MiniAudioTrack.java
app/src/main/java/com/singun/media/audio/processor/: AndroidAudioProcessorSupport.java  AudioProcessConfig.java  AudioProcessor.java  NativeAudioProcessor.java  NativeAudioProcessorSupport.java
app/src/main/java/com/singun/media/audio/recorder/: AudioFileWriter.java  BaseAudioRecorder.java  ExtraAudioRecorder.java  MiniAudioRecorder.java
app/src/main/java/com/singun/system/permission/: PermissionRequest.java
app/src/main/java/com/singun/ui/audio/visualizers/: RendererFactory.java  SimpleWaveformRenderer.java  WaveformRenderer.java  WaveformView.java
app/src/main/java/com/singun/wrapper/WebRTC/: EchoCancel.java  GainControl.java  NoiseSuppress.java  ProcessorConfig.java  WebRTCWrapper.java
app/src/main/java/omrecorder/: ExtraPullTransport.java
app/src/main/res/layout/: activity_main.xml  content_main.xml  dialog_setting.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
